# cookiecutter-fastx-cpython

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cookiecutter.json
.claude/: settings.local.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: README.md  main.py  pyproject.toml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/pyinstaller_build/: build_exe.sh
{{cookiecutter.project_slug}}/scripts/: clean_code_comments.py
{{cookiecutter.project_slug}}/src/: config.py  main.py  start.bat  {{cookiecutter.project_slug}}_main.py
{{cookiecutter.project_slug}}/src/api/: api.py
{{cookiecutter.project_slug}}/src/core/: auth_client.py  core.py  core.pyx
{{cookiecutter.project_slug}}/src/decorators/: __init__.py  logging.py  timing.py
{{cookiecutter.project_slug}}/src/tests/: test_logging.py  test_timer.py
{{cookiecutter.project_slug}}/src/utils/: helpers.py
